--- a/P010413.opf/meta.yml
+++ b/P010413.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P010413
+id: P010413
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W28959
   title: བོད་ཀྱི་འབྱུང་རྩིས་རྣམ་གཞག
-  volume: ''
   author: ''
+  volumes: {}
