--- a/P010413.opf/layers/v001/Pagination.yml
+++ b/P010413.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 4d8a9361fab348608d2d5066db85398f
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   327dc25f14cf4f15b8a5e7f58b70c799:
