--- a/P010413.opf/meta.yml
+++ b/P010413.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P010413
 initial_creation_type: ocr
+created_at: 23/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W28959
   title: བོད་ཀྱི་འབྱུང་རྩིས་རྣམ་གཞག
