--- a/P010413.opf/meta.yml
+++ b/P010413.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P010413
 initial_creation_type: ocr
 created_at: 23/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-19 20:48:27.309519
 source_metadata:
   id: bdr:W28959
   title: བོད་ཀྱི་འབྱུང་རྩིས་རྣམ་གཞག
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 252
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessFairUse
+  restrictedInChina: false
